<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_manager</name>
  <version>0.0.1</version>
  <description>Turtle Manager is an example of turtlesim code to draw a square.</description>
  <maintainer>Takuya Azumi</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>turtlesim</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
